src/objects/EmailCommunication__c.object
<CustomObject>
    <description>it is the object used to store email communication between the candidates and the HR or hiring manager</description>
    <fields>
        <fullName>CandidateSender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this value will be true if the Candidate is the sender i.e. if this email was received by the platform from a candidate</description>
        <label>CandidateSender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <description>it will determines the candidate who is communicated</description>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>EmailCommunications</relationshipLabel>
        <relationshipName>EmailCommunications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>it will contains the message which the Box employee has sent or received from the candidate</description>
        <inlineHelpText>it will contains the message which the Box employee has sent or received from the candidate</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>is the subject line for the message</description>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>EmailCommunication</label>
    <nameField>
        <label>Emails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmailCommunications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>